svg icon firefox fix

--- a/src/scss/components/Elements/Button.scss
+++ b/src/scss/components/Elements/Button.scss
@@ -26,7 +26,7 @@
         display: flex;
         justify-content: center;
         > .ui.icon {
-            circle, path, polygon { fill: $color-text-inverse; }
+            .icon-use-path { fill: $color-text-inverse; }
         }
     }
     &.button-color- {
@@ -39,7 +39,7 @@
             box-shadow: inset 0 0 0 1px $border-inverse;
             color: $color-text;
             > .ui.icon {
-                circle, path, polygon { fill: $color-text; }
+                .icon-use-path { fill: $color-text; }
             }
         }
         &primary { background-color: $bkgd-button; }
@@ -57,7 +57,7 @@
             box-shadow: inset 0 0 0 1px $border-light;
             color: $color-text-inverse;
             > .ui.icon {
-                circle, path, polygon { fill: $color-text; }
+                .icon-use-path { fill: $color-text; }
             }
         }
         &primary { background-color: $bkgd-button; }
